--- a/Exercise 2/TipCalculator/app/src/main/AndroidManifest.xml
+++ b/Exercise 2/TipCalculator/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.TipCalculator">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
